# Cresta

./: .gitignore  .gitmodules  BlackBook.txt  CMakeLists.txt  LICENSE  README.md  SceneSerializer.i  TODO.txt  results - Copy.json  results.json
Editor/: CMakeLists.txt
Editor/ProjectSelection/: ProjectSelection.hpp
Editor/src/: EditorApplication.cpp  EditorApplication.hpp  EditorCamera.cpp  EditorCamera.hpp  EditorCameraController.cpp  EditorCameraController.hpp  EditorLayer.cpp  EditorLayer.hpp  Example.cpp  Main.cpp
Editor/src/ProjectSelection/: ProjectSelection.cpp  ToastMessage.hpp
Engine/: CMakeLists.txt
Engine/assets/models/: cube.fbx
Engine/assets/models/box/: cube.fbx
Engine/assets/shaders/: Animation.glsl  BindlessTextureShader.glsl  CubeMapShader.glsl  FlatShader.glsl  GridShader.glsl  Model.glsl  ModelShader.glsl  SpriteShader.glsl  wireframeshader.glsl
Engine/src/: App.cpp  App.hpp  Base.hpp  Crestaph.cpp  Crestaph.hpp  EntryPoint.cpp
Engine/src/Core/: Application.cpp  Application.hpp  ApplicationHeader.hpp  Dispatcher.hpp  ImGUILayer.cpp  ImGUILayer.hpp  Input.cpp  Input.hpp  KeyCode.hpp  Layer.hpp  LayerStack.hpp  Log.cpp  Log.hpp  MouseCode.hpp  Time.cpp  Time.hpp  Window.cpp  Window.hpp
Engine/src/Core/Events/: Event.hpp  KeyBoardEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
Engine/src/Core/Layers/: ImGUILayer.cpp  ImGUILayer.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  PhysicsLayer.cpp  PhysicsLayer.hpp
Engine/src/Core/ModelLoading/: ModelLoader.cpp  ModelLoader.hpp
Engine/src/Core/Physics/: LinearMovement.hpp  Physics.cpp  Physics.hpp  PhysicsController.cpp  PhysicsController.hpp  PhysicsHeaders.hpp  PhysicsUtils.cpp  PhysicsUtils.hpp
Engine/src/Debug/: Profiler.cpp  Profiler.hpp
Engine/src/ECS/: Entity.cpp  Entity.hpp  UUID.cpp  UUID.hpp
Engine/src/ECS/Components/: AnimationController.cpp  AnimationController.hpp  ComponentHeader.hpp  ComponentUI.cpp  ComponentUI.hpp  Components.cpp  Components.hpp  PhysicsComponents.cpp  PhysicsComponents.hpp  RendererComponents.cpp  RendererComponents.hpp  ScriptComponent.cpp  ScriptComponent.hpp  WrapperClasses.cpp  WrapperClasses.hpp
Engine/src/ECS/Scene/: Scene.cpp  Scene.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp  SceneHierarchyPanelUtils.cpp  SceneHierarchyPanelUtils.hpp  SceneSerializer.cpp  SceneSerializer.hpp
Engine/src/Physics/: Physics.cpp  Physics.hpp  PhysicsHeaders.hpp  PhysicsUtils.hpp
Engine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLInput.cpp  OpenGLInput.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp  OpenGLWindow.cpp  OpenGLWindow.hpp  Utils.cpp  Utils.hpp
Engine/src/Renderer/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Model.cpp  Model.hpp  PrimitiveMeshes.cpp  PrimitiveMeshes.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  RendererAPI.cpp  RendererAPI.hpp  RendererCommand.cpp  RendererCommand.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexArray.cpp  VertexArray.hpp
Engine/src/Renderer/Animation/: Animation.cpp  Animation.hpp  Animator.cpp  Animator.hpp  Bone.cpp  Bone.hpp
Engine/src/Renderer/CubeMap/: Cubemap.cpp  Cubemap.hpp
Engine/src/Scene/: ComponentUI.cpp  ComponentUI.hpp  Components.cpp  Components.hpp  ContentBrowserPanel.cpp  ContentBrowserPanel.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp  SceneHierarchyPanelUtils.cpp  SceneHierarchyPanelUtils.hpp  SceneSerializer.cpp  SceneSerializer.hpp  UUID.hpp
Engine/src/ScriptEngine/: LuaManager.cpp  LuaManager.hpp
assets/shaders/: FlatShader.glsl  GridShader.glsl
